// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message converting to input message fifo with dedup with delay 1`] = `
{
  "attributes": {
    "any": {
      "type": "Number",
      "value": "100",
    },
    "bin": {
      "type": "Binary",
      "value": Uint8Array [
        116,
        101,
        115,
        116,
      ],
    },
    "some": {
      "type": "String",
      "value": "string",
    },
  },
  "body": "some-body",
  "deduplicationId": "dedupid",
  "delay": 100,
  "groupId": "groupid",
}
`;

exports[`Message converting to input message fifo with dedup without delay 1`] = `
{
  "attributes": {
    "any": {
      "type": "Number",
      "value": "100",
    },
    "bin": {
      "type": "Binary",
      "value": Uint8Array [
        116,
        101,
        115,
        116,
      ],
    },
    "some": {
      "type": "String",
      "value": "string",
    },
  },
  "body": "some-body",
  "deduplicationId": "dedupid",
  "delay": undefined,
  "groupId": "groupid",
}
`;

exports[`Message converting to input message fifo with delay 1`] = `
{
  "attributes": {
    "any": {
      "type": "Number",
      "value": "100",
    },
    "bin": {
      "type": "Binary",
      "value": Uint8Array [
        116,
        101,
        115,
        116,
      ],
    },
    "some": {
      "type": "String",
      "value": "string",
    },
  },
  "body": "some-body",
  "deduplicationId": undefined,
  "delay": 100,
  "groupId": "groupid",
}
`;

exports[`Message converting to input message fifo without delay 1`] = `
{
  "attributes": {
    "any": {
      "type": "Number",
      "value": "100",
    },
    "bin": {
      "type": "Binary",
      "value": Uint8Array [
        116,
        101,
        115,
        116,
      ],
    },
    "some": {
      "type": "String",
      "value": "string",
    },
  },
  "body": "some-body",
  "deduplicationId": undefined,
  "delay": undefined,
  "groupId": "groupid",
}
`;

exports[`Message converting to input message standard with delay 1`] = `
{
  "attributes": {
    "any": {
      "type": "Number",
      "value": "100",
    },
    "bin": {
      "type": "Binary",
      "value": Uint8Array [
        116,
        101,
        115,
        116,
      ],
    },
    "some": {
      "type": "String",
      "value": "string",
    },
  },
  "body": "some-body",
  "deduplicationId": undefined,
  "delay": 100,
  "groupId": undefined,
}
`;

exports[`Message converting to input message standard without attributes with delay 1`] = `
{
  "attributes": undefined,
  "body": "some-body",
  "deduplicationId": undefined,
  "delay": 100,
  "groupId": undefined,
}
`;

exports[`Message converting to input message standard without attributes without delay 1`] = `
{
  "attributes": undefined,
  "body": "some-body",
  "deduplicationId": undefined,
  "delay": undefined,
  "groupId": undefined,
}
`;

exports[`Message converting to input message standard without delay 1`] = `
{
  "attributes": {
    "any": {
      "type": "Number",
      "value": "100",
    },
    "bin": {
      "type": "Binary",
      "value": Uint8Array [
        116,
        101,
        115,
        116,
      ],
    },
    "some": {
      "type": "String",
      "value": "string",
    },
  },
  "body": "some-body",
  "deduplicationId": undefined,
  "delay": undefined,
  "groupId": undefined,
}
`;
